# fast-capi

./: .gitignore  CMakeLists.txt  README.md
include/: fast_build.h  fast_parse.h
src/fast_capi/: fast_parse.c
